force-app/main/default/objects/Question_Choice_Master__c/Question_Choice_Master__c.object-meta.xml
<CustomObject>
    <label>Question Choice Master</label>
    <nameField>
        <label>Question Choice Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions Choice Master</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>