force-app/main/default/objects/Question_Choice_Master__c/fields/BRD_Rule__c.field-meta.xml
<CustomField>
    <fullName>BRD_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BRD Rule</label>
    <referenceTo>BRD_Rule__c</referenceTo>
    <relationshipLabel>Questions Choice Master</relationshipLabel>
    <relationshipName>Questions_Choice_Master</relationshipName>
    <type>Lookup</type>
</CustomField>