force-app/main/default/objects/Question_Choice_Master__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>BRD_Rule__c</referenceTo>
    <relationshipLabel>Questions Choice Master (Category)</relationshipLabel>
    <relationshipName>Questions_Choice_Master2</relationshipName>
    <type>Lookup</type>
</CustomField>