force-app/main/default/objects/Question_Choice_Master__c/fields/Is_Other__c.field-meta.xml
<CustomField>
    <fullName>Is_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Other</label>
    <type>Checkbox</type>
</CustomField>