force-app/main/default/objects/Question_Choice_Master__c/fields/Question_Master__c.field-meta.xml
<CustomField>
    <fullName>Question_Master__c</fullName>
    <label>Question Master</label>
    <referenceTo>Question_Master__c</referenceTo>
    <relationshipLabel>Questions Choice Master</relationshipLabel>
    <relationshipName>Questions_Choice_Master</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>