force-app/main/default/objects/Question_Choice_Master__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Category</label>
    <referenceTo>BRD_Rule__c</referenceTo>
    <relationshipLabel>Questions Choice Master (Sub Category)</relationshipLabel>
    <relationshipName>Questions_Choice_Master1</relationshipName>
    <type>Lookup</type>
</CustomField>